--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         id: build
         uses: valicm/appimage-bash@main
         with:
-          version_url: 'https://code.visualstudio.com/sha/download?build=stable\&os=linux-x64'
+          version_url: 'https://code.visualstudio.com/sha/download?build=insider\&os=linux-x64'
           version_file: 'resources/app/package.json'
           version_bash: 'jq -r  .version'
           version_icon: 'code.png'
