--- a/app.desktop
+++ b/app.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=VSCode
-GenericName=VSCode
+Name=VSCode-Insiders
+GenericName=VSCode-Insiders
 Comment=Code Editing. Redefined.
-Exec=code --unity-launch %F
+Exec=code-insiders --unity-launch %F
 Icon=code
 Categories=TextEditor;Development;IDE;
 StartupWMClass=Code
@@ -15,5 +15,5 @@ Actions=new-empty-window;
 
 [Desktop Action new-empty-window]
 Name=New Empty Window
-Exec=code --new-window %F
+Exec=code-insiders --new-window %F
 Icon=code
