--- a/app.desktop
+++ b/app.desktop
@@ -5,7 +5,7 @@ Name=VSCode-Insiders
 GenericName=VSCode-Insiders
 Comment=Code Editing. Redefined.
 Exec=code-insiders --unity-launch %F
-Icon=code
+Icon=code-insiders
 Categories=TextEditor;Development;IDE;
 StartupWMClass=Code
 StartupNotify=true
@@ -16,4 +16,4 @@ Actions=new-empty-window;
 [Desktop Action new-empty-window]
 Name=New Empty Window
 Exec=code-insiders --new-window %F
-Icon=code
+Icon=code-insiders
